--- a/01-뉴런 만들기.ipynb
+++ b/01-뉴런 만들기.ipynb
@@ -419,23 +419,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "199 0.005296441808010588\n",
-      "399 0.00021528944610926803\n",
-      "599 8.754277703859614e-06\n",
-      "799 3.74145660786418e-07\n",
-      "999 2.792131748030613e-09\n",
-      "1199 1.8614210173240053e-09\n",
-      "1399 1.8614210173240053e-09\n",
-      "1599 1.8614210173240053e-09\n",
-      "1799 1.8614210173240053e-09\n",
-      "1999 1.8614210173240053e-09\n"
+      "199 -0.002545915425882561\n",
+      "tf.Tensor([ 0.03579131 -0.01166996], shape=(2,), dtype=float32)\n",
+      "tf.Tensor([0.01577254], shape=(1,), dtype=float32)\n",
+      "-0.5168581978791436\n",
+      "\n",
+      "399 -0.00010350882228749025\n",
+      "tf.Tensor([ 0.05071551 -0.00053715], shape=(2,), dtype=float32)\n",
+      "tf.Tensor([0.0006412], shape=(1,), dtype=float32)\n",
+      "-0.5129819302656191\n",
+      "\n",
+      "599 -4.207739033978974e-06\n",
+      "tf.Tensor([ 5.1259134e-02 -2.2206455e-05], shape=(2,), dtype=float32)\n",
+      "tf.Tensor([2.6062131e-05], shape=(1,), dtype=float32)\n",
+      "-0.5128243102398904\n",
+      "\n",
+      "799 -1.6008220748986446e-07\n",
+      "tf.Tensor([ 5.1280838e-02 -9.1269612e-07], shape=(2,), dtype=float32)\n",
+      "tf.Tensor([1.0542572e-06], shape=(1,), dtype=float32)\n",
+      "-0.5128179023001046\n",
+      "\n",
+      "999 5.5842631629943185e-09\n",
+      "tf.Tensor([ 5.1281720e-02 -4.4703484e-08], shape=(2,), dtype=float32)\n",
+      "tf.Tensor([3.7252903e-08], shape=(1,), dtype=float32)\n",
+      "-0.5128176417011571\n",
+      "\n",
+      "1199 3.722842145670313e-09\n",
+      "tf.Tensor([ 5.1281754e-02 -7.4505806e-09], shape=(2,), dtype=float32)\n",
+      "tf.Tensor([3.7252903e-09], shape=(1,), dtype=float32)\n",
+      "-0.5128176323940516\n",
+      "\n",
+      "1399 3.722842145670313e-09\n",
+      "tf.Tensor([ 5.1281754e-02 -7.4505806e-09], shape=(2,), dtype=float32)\n",
+      "tf.Tensor([3.7252903e-09], shape=(1,), dtype=float32)\n",
+      "-0.5128176323940516\n",
+      "\n",
+      "1599 3.722842145670313e-09\n",
+      "tf.Tensor([ 5.1281754e-02 -7.4505806e-09], shape=(2,), dtype=float32)\n",
+      "tf.Tensor([3.7252903e-09], shape=(1,), dtype=float32)\n",
+      "-0.5128176323940516\n",
+      "\n",
+      "1799 3.722842145670313e-09\n",
+      "tf.Tensor([ 5.1281754e-02 -7.4505806e-09], shape=(2,), dtype=float32)\n",
+      "tf.Tensor([3.7252903e-09], shape=(1,), dtype=float32)\n",
+      "-0.5128176323940516\n",
+      "\n",
+      "1999 3.722842145670313e-09\n",
+      "tf.Tensor([ 5.1281754e-02 -7.4505806e-09], shape=(2,), dtype=float32)\n",
+      "tf.Tensor([3.7252903e-09], shape=(1,), dtype=float32)\n",
+      "-0.5128176323940516\n",
+      "\n"
      ]
     }
    ],
@@ -459,7 +499,11 @@
     "        error_sum += error\n",
     "        \n",
     "    if i % 200 == 199:\n",
-    "        print(i, error_sum)"
+    "        print(i, error_sum)\n",
+    "        print(w)\n",
+    "        print(b)\n",
+    "        print(error)\n",
+    "        print(\"\")"
    ]
   },
   {
